// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
<div
  className="sc-hMqMXs gYuuML"
/>
`;

exports[`renders correctly with show and type="alert-danger" props 1`] = `
<div
  className="sc-hMqMXs eiUdPV"
  type="alert-danger"
>
  error message
</div>
`;

exports[`renders correctly with show and type="alert-success" props 1`] = `
<div
  className="sc-hMqMXs dZODKu"
  type="alert-success"
>
  error message
</div>
`;

exports[`renders correctly with show and type="hint" props 1`] = `
<div
  className="sc-hMqMXs bdxywj"
  type="hint"
>
  error message
</div>
`;

exports[`renders correctly with show prop 1`] = `
<div
  className="sc-hMqMXs cPUyUa"
>
  message
</div>
`;
